fix squishing

--- a/src/client/main/scss/_mobile.scss
+++ b/src/client/main/scss/_mobile.scss
@@ -58,6 +58,6 @@
 
 	#ko-fi
 	{
-		width: 85%;
+		width: 60% !important;
 	}
 }
